--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="scripts.js" defer type="module"></script>
+    <title>Tally App</title>
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="scripts/index.js"></script>
+  </body>
 </html>
